consolidated event functions

--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
             <li>
               <span class="logo"></span>A universal and responsive 
               <script type="text/javascript">
-                window.lodge.embed(
+                window.lodge.embeds.create(
                   {
                     src: 'embed.html',
-                    options: 'modal',
+                    modal: true,
                     alt: 'modal overlay'
                   }
                 );
