--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
               <embed class="lodge" src="embed.html" id="embed1">
             </div>
             <div class="four columns">
-              <embed class="lodge" src="embed.html" id="embed2" name="middle-embed" data-css=".logo{color:#a00;}">
+              <embed class="lodge" src="embed.html" id="embed2" title="middle embed" data-css=".logo{color:#a00;}">
             </div>
             <div class="four columns">
               <embed class="lodge" src="https://anotherembed.glitch.me/" id="embed3">
@@ -99,15 +99,7 @@
             <li><span class="logo"></span>Easily create iframe embeds with secure cross-window event relays</li>
             <li>
               <span class="logo"></span>A universal and responsive 
-              <script type="text/javascript">
-                window.lodge.embeds.create(
-                  {
-                    src: 'embed.html',
-                    modal: true,
-                    alt: 'modal overlay'
-                  }
-                );
-              </script>
+              <embed class="lodge modal" src="embed.html" id="embed2" title="modal overlay">
             </li>
             <li><span class="logo"></span>Debug mode to help see what's happening while you build</li>
             <li><span class="logo"></span>Override CSS of embeds with a simple data attribute</li>
