cleaned up logging
 - moved all debug/ready checks to debug.out
 - no need to call debug.store...will happen automatically
 - destructured calls for debug

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <li><span class="logo"></span>Easily create iframe embeds with secure cross-window event relays</li>
             <li>
               <span class="logo"></span>A universal and responsive 
-              <embed class="lodge modal" src="embed.html" id="embed2" title="modal overlay">
+              <embed class="lodge modal" src="embed.html" id="embedmodal" title="modal overlay">
             </li>
             <li><span class="logo"></span>Debug mode to help see what's happening while you build</li>
             <li><span class="logo"></span>Override CSS of embeds with a simple data attribute</li>
