Flex content laytout looks decent
But maybe let’s try grid...

--- a/branded-demo.html
+++ b/branded-demo.html
@@ -27,28 +27,43 @@
 
 <body>
     <main>
-        <section>
+        <section class="intro">
             <h1 class="logo-lodge">lodge</h1>
             <h2>We use the friendly Quicksand Regular for headers and titles</h2>
             <p>Roboto Slab is a simple, easy-to-read choice for our paragraphs, completing the text choices. Sizes should be on the large side of normal, with generous line spacing and no long spans.</p>
             <p class="icon-paragraph feature-embed">Roboto Slab is a simple, easy-to-read choice for our paragraphs, completing the text choices. Sizes should be on the large side of normal, with generous line spacing and no long spans.</p>
             <p class="icon-paragraph feature-overlay">Roboto Slab is a simple, easy-to-read choice for our paragraphs, completing the text choices. Sizes should be on the large side of normal, with generous line spacing and no long spans.</p>
         </section>
-        <section>
-            <h2>What do you want an embed to do?</h2>
-            <p>
-                [demos here]
-            </p>
-        </section>
-        <section>
-            <div class="features">
-                [feature details]
+        <section class="alt-section">
+            <div class="content">
+                <h2>What do you want an embed to do?</h2>
+                <p>
+                    [demos here]
+                </p>
             </div>
-            <div class="docs">[docs]</div>
-            <div class="links">[github, glitch, etc]</div>
         </section>
+        <div class="split-content">
+            <div class="narrow">
+                <section class="features">
+                    [feature details]
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sin autem eos non probabat, quid attinuit cum iis, quibuscum re concinebat, verbis discrepare? Vulgo enim dicitur: Iucundi acti labores, nec male Euripidesconcludam, si potero, Latine; Intellegi quidem, ut propter aliam quampiam rem, verbi gratia propter voluptatem, nos amemus; Pauca mutat vel plura sane;
+                </section>
+                <section class="links">[github, glitch, etc]</section>
+            </div>
+            <section class="docs">[docs]
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quid igitur dubitamus in tota eius natura quaerere quid sit effectum? Utilitatis causa amicitia est quaesita. Ita ceterorum sententiis semotis relinquitur non mihi cum Torquato, sed virtuti cum voluptate certatio. Tu autem, si tibi illa probabantur, cur non propriis verbis ea tenebas? Uterque enim summo bono fruitur, id est voluptate. Nulla erit controversia. 
+
+Nihil opus est exemplis hoc facere longius. Quae animi affectio suum cuique tribuens atque hanc, quam dico. Duo Reges: constructio interrete. Quonam, inquit, modo? Pauca mutat vel plura sane; Portenta haec esse dicit, neque ea ratione ullo modo posse vivi; Quid est, quod ab ea absolvi et perfici debeat? Itaque haec cum illis est dissensio, cum Peripateticis nulla sane. Dempta enim aeternitate nihilo beatior Iuppiter quam Epicurus; Satis est tibi in te, satis in legibus, satis in mediocribus amicitiis praesidii.
+            </section>
+        </div>
     </main>
-<footer></footer>
+<footer>
+    <div class="footer-logo-wrap">
+    <a href="https://substation.me" class="footer-logo">
+        <img src="assets/logo.svg" alt="Substation" height="30">
+    </a>
+    </div>
+</footer>
 </body>
 
 </html>
