--- a/embed.html
+++ b/embed.html
@@ -22,7 +22,7 @@
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="https://cdn.glitch.com/ae8fe322-3d99-45d4-b293-37c0791f3234%2Flodge.png">
-  <script type="text/javascript" src="lib/lodge.js" data-options="lightboxvideo=true"></script>
+  <script type="text/javascript" src="dist/lodge.js" data-options="lightboxvideo=true"></script>
   
 </head>
 <body>
@@ -154,7 +154,7 @@
       hellobutton.addEventListener("click", function(e){
         e.stopPropagation();
         e.preventDefault();
-        vv.overlay.reveal({innerContent: '<h1>Hello.</h1>'});
+        vv.prompt.message({message: 'Hello.'});
       }, false);
       
       // hidebutton hides the buttons and puts the boxes back to default
