--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="https://cdn.glitch.com/ae8fe322-3d99-45d4-b293-37c0791f3234%2Flodge.png">
-  <script type="text/javascript" src="lib/lodge.js" data-options="lightboxvideo=true&noembed=true"></script>
+  <script type="text/javascript" src="dist/lodge.js" data-options="lightboxvideo=true&noembed=true"></script>
   
 </head>
 <body>
