--- a/index.html
+++ b/index.html
@@ -29,18 +29,14 @@
 <body>
     <main>
         <section class="intro">
-            <h1 class="logo-lodge">lodge</h1>
-            <h2>We use the friendly Quicksand Regular for headers and titles</h2>
-            <p>Roboto Slab is a simple, easy-to-read choice for our paragraphs, completing the text choices. Sizes should be on the large side of normal, with generous line spacing and no long spans.</p>
-            <p class="icon-paragraph feature-embed">Roboto Slab is a simple, easy-to-read choice for our paragraphs, completing the text choices. Sizes should be on the large side of normal, with generous line spacing and no long spans.</p>
-            <p class="icon-paragraph feature-overlay">Roboto Slab is a simple, easy-to-read choice for our paragraphs, completing the text choices. Sizes should be on the large side of normal, with generous line spacing and no long spans.</p>
+          <h1 class="logo-lodge">lodge</h1>
+          <h2>Simple messaging, input, media, and checkout for embeds</h2>
+          <p class="icon-paragraph feature-embed">Lodge was made for a more decentralized web where anyone can build a space of their own. Platform features that lets us talk, upload media, place orders, and connect can already be used via API. Lodge helps extend these features into any site as easily as embedding a video.</p>
+          <p class="icon-paragraph feature-overlay">Built to bring UI consistency to critical workflows, Lodge is a lightweight, open library with no dependencies. It runs on both page and embed, securely synchronizing events and adding a shared overlay for modals, messages, and (coming soon) even a full checkout flow.</p>
         </section>
         <section class="alt-section">
             <div class="content">
                 <h2>What do you want an embed to do?</h2>
-                <p>
-                    Lodge is intended to bring consistency in interaction to the little workflows we often reinvent — modals, quick forms, embeds, even checkout flow. The idea is a single lightweight library that can provide simplified modal content, securely synchronize events between windows, and generally make working bite-sized functionality much simpler.
-                </p>
                 <embed class="lodge" src="embed.html" id="embed1">
                 <embed class="lodge" src="embed.html" id="embed2" title="middle embed" data-css=".logo{color:#a00;}">
             </div>
@@ -50,45 +46,44 @@
                 <section class="features">
                     <h3>Features</h3> 
                     <ul>
-                        <li><span class="logo"></span>Easily create iframe embeds with secure cross-window event relays</li>
+                        <li>Easily create iframe embeds with secure cross-window event relays</li>
                         <li>
-                        <span class="logo"></span>A universal and responsive 
-                        <span class="vv-modalopen"><a href="" target="_blank">modal overlay</a></span>
+                          A universal and responsive 
+                          <span class="vv-modalopen"><a href="" target="_blank">modal overlay</a></span>
                         </li>
-                        <li><span class="logo"></span>Debug mode to help see what's happening while you build</li>
-                        <li><span class="logo"></span>Override CSS of embeds with a simple data attribute</li>
-                        <li><span class="logo"></span>Automatically <a href="https://www.youtube.com/watch?v=WQPfQvLIseA">show</a> <a href="https://vimeo.com/15744536">videos</a> in a modal overlay (optional)</li>
-                        <li><span class="logo"></span>Request simple user input with generated modal forms</li>
+                        <li>Debug mode to help see what's happening while you build</li>
+                        <li>Override CSS of embeds with a simple data attribute</li>
+                        <li>Automatically <a href="https://www.youtube.com/watch?v=WQPfQvLIseA">show</a> <a href="https://vimeo.com/15744536">videos</a> in a modal overlay (optional)</li>
+                        <li>Request simple user input with generated modal forms</li>
                     </ul>
                 </section>
                 <section class="links">[github, glitch, etc]</section>
             </div>
             <section class="docs">
-                <h3 id="docs">Quick usage overview</h3>
+                <h3 id="docs">A few basics</h3>
                 <p>
-                  Embeds are created with a single line of code:<br>
-                  <code>&lt;embed class="lodge" src="embed.html"&gt;</code>
+                  Embeds are created with simple markup:
                 </p>
+                <code>&lt;embed class="lodge" src="embed.html"&gt;</code>
                 <p>
-                  To force an override of the embed's CSS rules, just add a data attribute:<br>
-                  <code>data-css=".logo{color:#a00;}"</code>
+                  You can push CSS overrides to an embed with a data attribute:<br>
                 </p>
+                <code>data-css=".logo{color:#a00;}"</code>
                 <p>
-                  Want to use different styles for an embed and a modal? No problem. Just add CSS. Look for these classes
-                  situationally added to the main html element:<br>
-                  <code>.vv-embed, .vv-modal</code>
+                  Lodge inserts its CSS at the top of the cascade, so you can add custom styles to embeds and the overlay:<br>
                 </p>
+                <code>.vv-embed, .vv-modal</code>
                 <p>
                   It's all event driven, and Lodge will tell you when it's ready:
-                  <code>
-                    window.lodge.events.add(vv,'ready', function(e) {<br>
-                      &nbsp;&nbsp;// ...do something <br>
-                    });
-                  </code>
                 </p>
+                <code>
+                  window.lodge.events.add(vv,'ready', function(e) {<br>
+                    &nbsp;&nbsp;// ...do something <br>
+                  });
+                </code>
                 <p>
-                  Need to see what's happening in real-time as your scripts run? Pop open the console and add '?debug=true' to
-                  the URL. Easy.
+                  Need to see what's happening in real-time as your scripts run? Just add <code>?debug=true</code> to
+                  the main page URL and see console log activity for the main page and embeds.
                 </p>
             </section>
         </div>
