--- a/index.html
+++ b/index.html
@@ -5,17 +5,24 @@
 <head>
   <meta charset="utf-8">
   <title></title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="A frontend JavaScript library providing simple messaging, input, media, and checkout flow — even for embeds.">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
+  <meta property="og:title" content="lodge, by substation">
+  <meta property="og:type" content="image/png">
+  <meta property="og:url" content="https://lodge.substation.dev/">
+  <meta property="og:image" content="/assets/opengraph.png">
 
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
-  <!-- Place favicon.ico in the root directory -->
+  <!-- generics -->
+  <link rel="icon" href="https://www.substation.dev/assets/icons/favicon-32.png" sizes="32x32">
+  <link rel="icon" href="https://www.substation.dev/assets/icons/favicon-192.png" sizes="192x192">
+
+  <!-- Android -->
+  <link rel="shortcut icon" sizes="196x196" href="https://www.substation.dev/assets/icons/favicon-196.png">
+
+  <!-- iOS -->
+  <link rel="apple-touch-icon" href="https://www.substation.dev/assets/icons/favicon-152.png" sizes="152x152">
+  <link rel="apple-touch-icon" href="https://www.substation.dev/assets/icons/favicon-180.png" sizes="180x180">
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/index.css">
@@ -77,7 +84,8 @@
                   It's all event driven, and Lodge will tell you when it's ready:
                 </p>
                 <code>
-                  window.lodge.events.add(vv,'ready', function(e) {<br>
+                  window.lodge.events.add(<br>
+                    vv,'ready', function(e) {<br>
                     &nbsp;&nbsp;// ...do something <br>
                   });
                 </code>
