service icons/links

--- a/index.html
+++ b/index.html
@@ -64,7 +64,11 @@
                         <li>Request simple user input with generated modal forms</li>
                     </ul>
                 </section>
-                <section class="links">[github, glitch, etc]</section>
+                <section class="links">
+                  <a href="https://github.com/substation-me"><img class="icon-service" src="/assets/icon-github.svg" alt="GitHub"></a>
+                  <a href="https://twitter.com/SubstationHQ"><img class="icon-service" src="/assets/icon-twitter.svg" alt="Twitter"></a>
+                  <a href="https://lodge.glitch.me/"><img class="icon-service" src="/assets/icon-glitch.svg" alt="Glitch"></a>
+                </section>
             </div>
             <section class="docs">
                 <h3 id="docs">A few basics</h3>
@@ -85,7 +89,7 @@
                 </p>
                 <code>
                   window.lodge.events.add(<br>
-                    vv,'ready', function(e) {<br>
+                    &nbsp;&nbsp;vv,'ready', function(e) {<br>
                     &nbsp;&nbsp;// ...do something <br>
                   });
                 </code>
@@ -116,5 +120,4 @@
 </script>
 
 </body>
-
 </html>
