minor cleanup, code and file structure

--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
-
 <!doctype html>
 <html lang="en" class="substation-brand-page">
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>lodge</title>
   <meta name="description" content="A frontend JavaScript library providing simple messaging, input, media, and checkout flow — even for embeds.">
-  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <meta property="og:title" content="lodge, by substation">
   <meta property="og:type" content="image/png">
   <meta property="og:url" content="https://lodge.substation.dev/">
-  <meta property="og:image" content="/assets/opengraph.png">
+  <meta property="og:image" content="/assets/images/opengraph.png">
 
   <!-- generics -->
   <link rel="icon" href="https://www.substation.dev/assets/icons/favicon-32.png" sizes="32x32">
@@ -24,8 +23,8 @@
   <link rel="apple-touch-icon" href="https://www.substation.dev/assets/icons/favicon-152.png" sizes="152x152">
   <link rel="apple-touch-icon" href="https://www.substation.dev/assets/icons/favicon-180.png" sizes="180x180">
 
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="/assets/css/normalize.css">
+  <link rel="stylesheet" href="/assets/css/index.css">
 
   <script type="text/javascript" src="dist/lodge.js" data-options="lightboxvideo=true&noembed=true"></script>
 
@@ -54,10 +53,7 @@
                     <h3>Features</h3> 
                     <ul>
                         <li>Easily create iframe embeds with secure cross-window event relays</li>
-                        <li>
-                          A universal and responsive 
-                          <span class="vv-modalopen"><a href="" target="_blank">modal overlay</a></span>
-                        </li>
+                        <li>A universal and responsive overlay</li>
                         <li>Debug mode to help see what's happening while you build</li>
                         <li>Override CSS of embeds with a simple data attribute</li>
                         <li>Automatically <a href="https://www.youtube.com/watch?v=WQPfQvLIseA">show</a> <a href="https://vimeo.com/15744536">videos</a> in a modal overlay (optional)</li>
@@ -65,9 +61,9 @@
                     </ul>
                 </section>
                 <section class="links">
-                  <a href="https://github.com/substation-me"><img class="icon-service" src="/assets/icon-github.svg" alt="GitHub"></a>
-                  <a href="https://twitter.com/SubstationHQ"><img class="icon-service" src="/assets/icon-twitter.svg" alt="Twitter"></a>
-                  <a href="https://lodge.glitch.me/"><img class="icon-service" src="/assets/icon-glitch.svg" alt="Glitch"></a>
+                  <a href="https://github.com/substation-me"><img class="icon-service" src="/assets/images/icon-github.svg" alt="GitHub"></a>
+                  <a href="https://twitter.com/SubstationHQ"><img class="icon-service" src="/assets/images/icon-twitter.svg" alt="Twitter"></a>
+                  <a href="https://lodge.glitch.me/"><img class="icon-service" src="/assets/images/icon-glitch.svg" alt="Glitch"></a>
                 </section>
             </div>
             <section class="docs">
@@ -101,11 +97,6 @@
         </div>
     </main>
 <footer>
-    <div class="footer-logo-wrap">
-    <a href="https://substation.me" class="footer-logo">
-        <img src="assets/logo.svg" alt="Substation" height="20">
-    </a>
-    </div>
 </footer>
 
 <script type="text/javascript">
