slashes in the footer

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
         </div>
     </main>
 <footer>
+  <img id="slashes" src="assets/images/slashes.svg" alt="///">
 </footer>
 
 <script type="text/javascript">
