final type, list, link styles
...some minor tweaks to the top copy as well

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <section class="intro">
           <h1 class="logo-lodge">lodge</h1>
           <h2>Simple messaging, input, media, and checkout for embeds</h2>
-          <p class="icon-paragraph feature-embed">Lodge was made for a more decentralized web where anyone can build a space of their own. Platform features that lets us talk, upload media, place orders, and connect can already be used via API. Lodge helps extend these features into any site as easily as embedding a video.</p>
+          <p class="icon-paragraph feature-embed">Lodge was made for a more decentralized web where anyone can build a space of their own. Platform features let us talk, upload media, place orders, and connect. They're already used by developers via API. Lodge helps extend them into any site as easily as embedding a video.</p>
           <p class="icon-paragraph feature-overlay">Built to bring UI consistency to critical workflows, Lodge is a lightweight, open library with no dependencies. It runs on both page and embed, securely synchronizing events and adding a shared overlay for modals, messages, and (coming soon) even a full checkout flow.</p>
         </section>
         <section class="alt-section">
@@ -97,7 +97,7 @@
         </div>
     </main>
 <footer>
-  <img id="slashes" src="assets/images/slashes.svg" alt="///">
+  <img id="slashes" src="/assets/images/slashes.svg" alt="///">
 </footer>
 
 <script type="text/javascript">
