android chrome theme color

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <meta property="og:url" content="https://lodge.substation.dev/">
   <meta property="og:image" content="https://lodge.substation.dev/assets/images/opengraph-lodge.png">
 
+  <meta name="theme-color" content="#000000">
+
   <!-- generics -->
   <link rel="icon" href="https://www.substation.dev/assets/icons/favicon-32.png" sizes="32x32">
   <link rel="icon" href="https://www.substation.dev/assets/icons/favicon-192.png" sizes="192x192">
