updated github org name

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
                     </ul>
                 </section>
                 <section class="links">
-                  <a href="https://github.com/substation-me"><img class="icon-service" src="/assets/images/icon-github.svg" alt="GitHub"></a>
-                  <a href="https://twitter.com/SubstationHQ"><img class="icon-service" src="/assets/images/icon-twitter.svg" alt="Twitter"></a>
+                  <a href="https://github.com/substationHQ"><img class="icon-service" src="/assets/images/icon-github.svg" alt="GitHub"></a>
+                  <a href="https://twitter.com/substationHQ"><img class="icon-service" src="/assets/images/icon-twitter.svg" alt="Twitter"></a>
                   <a href="https://lodge.glitch.me/"><img class="icon-service" src="/assets/images/icon-glitch.svg" alt="Glitch"></a>
                 </section>
             </div>
