created embed css and html
also ran the index.html through a validator and popped in a few custom tweaks in/around the demo section.

--- a/embed.html
+++ b/embed.html
@@ -1,30 +1,17 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
-
-  <!-- Basic Page Needs
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>lodge.js</title>
-  <meta name="description" content="A demo embed.">
-  <meta name="author" content="@jessevondoom">
-
-  <!-- Mobile Specific Metas
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <!-- CSS
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/skeleton.css">
-  <link rel="stylesheet" href="css/embed.css">
-
-  <!-- Favicon
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="https://cdn.glitch.com/ae8fe322-3d99-45d4-b293-37c0791f3234%2Flodge.png">
-  <script type="text/javascript" src="dist/lodge.js" data-options="lightboxvideo=true"></script>
+  <title>lodge</title>
   
+  <link rel="stylesheet" href="/assets/css/normalize.css">
+  <link rel="stylesheet" href="/assets/css/embed.css">
+
+  <script src="/dist/lodge.js"></script>
+
 </head>
+
 <body>
 
   <!-- Primary Page Layout
