final index markup/css for demo

--- a/index.html
+++ b/index.html
@@ -43,14 +43,11 @@
         </section>
         <div class="alt-section">
           <div class="split-content">
-            <div class="narrow">
-              <section class="demo-copy">
-                <h2>What do you want an embed to do?</h2>
-              </section>
-            </div>
+            <section class="demo-copy">
+              <h2>What do you want an embed to do?</h2>
+            </section>
             <div class="demo-embed">
-              <embed class="lodge" src="embed.html" id="embed1">
-              <embed class="lodge" src="embed.html" id="embed2" title="middle embed" data-css=".logo{color:#a00;}">
+              <embed class="lodge" src="embed.html" id="embed" title="middle embed" data-css=".logo{color:#a00;}">
             </div>
           </div>
         </div>
@@ -108,6 +105,7 @@
 </footer>
 
 <script>
+  /*
   var vv = window.lodge;
   vv.addEventListener('ready', function(e) {
     vv.addEventListener('startshuffle', function(e) {
@@ -116,6 +114,7 @@
       window.lodge.events.fire({ obj: window.lodge,type: 'doshuffle',target: 'embed2' });
     });
   });
+  */
 </script>
 
 </body>
