--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="alt-section">
           <div class="split-content">
               <section class="demo-copy">
-                <h2>What do you want an embed to do?</h2>
+                <h2>It's probably easier just to show you.</h2>
               </section>
             <div class="demo-embed">
               <embed class="lodge" src="embed.html" id="embed" title="middle embed" data-css=".logo{color:#a00;}">
