--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
         <div class="alt-section">
           <div class="split-content">
               <section class="demo-copy">
-                <h2>It's probably easier just to show you.</h2>
+                <h2>Let's just take a look.</h2>
+                <p>Some things are just to show than tell, so we set up a quick demo embed to show things off.</p>
                 <button class="demo-open">Show the demo embed</button>
               </section>
             <div class="demo-embed">
