quick fixes for site

--- a/embed.html
+++ b/embed.html
@@ -23,7 +23,7 @@
 
   <div class="demo-panels">
     <div class="demo-panel-0">
-      <h2>Hi there.</h2>
+      <h2>This part's an iframe.</h2>
       <a href="#" id="hellobutton">Say hello</a><br>
       <a href="https://www.youtube.com/watch?v=smVoxgny20U">Watch a video</a>
     </div>
