--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <div class="split-content">
               <section class="demo-copy">
                 <h2>Let's just take a look.</h2>
-                <p>Some things are just to show than tell, so we set up a quick demo embed to show things off.</p>
+                <p>Some things are easier to show than tell, so we set up a quick demo to show how Lodge works with embeds.</p>
                 <button class="demo-open">Show the demo embed</button>
               </section>
             <div class="demo-embed">
