putting lightbox back
...forgot we were using that lol

--- a/index.html
+++ b/index.html
@@ -108,6 +108,8 @@
 
 <script>
   var vv = window.lodge;
+  var currentDemo = 0;
+  
   vv.addEventListener('ready', function(e) {
     var openbutton = document.querySelector('.demo-open');
     openbutton.addEventListener('click', function(e){
