mobile fixes on the index...
...and sending the demo states in an event to the embed.

--- a/embed.html
+++ b/embed.html
@@ -55,6 +55,10 @@
       var demos = document.querySelector('div.demo-panels');
       demos.style.opacity = 1;
     });
+
+    vv.addEventListener('changedemo', function(e) {
+      console.log(e.detail);
+    });
   </script>
   
 </body>
