--- a/index.html
+++ b/index.html
@@ -126,6 +126,12 @@
       'header':'Pretty neat, right?',
       'text':'Lodge turns a simple &lt;embed&gt; tag into an iframe, sized to fit responsively wherever you put it.',
       'button':'Tell me about the overlay'
+    },
+    {
+      // 0: showing the embed itself, resizing, etc
+      'header':'The overlay makes messaging easy',
+      'text':'Just a single line in the main window or the embed and you\'re handling messaging or interaction.',
+      'button':'Reset it all'
     }
   ]
 
