code sample tweak

--- a/index.html
+++ b/index.html
@@ -93,8 +93,7 @@
                   It's all event driven, and Lodge will tell you when it's ready:
                 </p>
                 <code>
-                  window.lodge.events.add(<br>
-                    &nbsp;&nbsp;vv,'ready', function(e) {<br>
+                  window.lodge.events.add( vv, 'ready', function(e) {<br>
                     &nbsp;&nbsp;// ...do something <br>
                   });
                 </code>
