more copy fixes

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <li>A universal and responsive overlay</li>
                         <li>Debug mode to help see what's happening while you build</li>
                         <li>Override CSS of embeds with a simple data attribute</li>
-                        <li>Automatically <a href="https://www.youtube.com/watch?v=h9T0ICrAzqU">show</a> <a href="https://vimeo.com/15744536">videos</a> in a modal overlay (optional)</li>
+                        <li>Automatically <a href="https://www.youtube.com/watch?v=h9T0ICrAzqU">show</a> <a href="https://vimeo.com/15744536">videos</a> in a full-screen overlay (optional)</li>
                         <li>Request simple user input with generated modal forms</li>
                     </ul>
                 </section>
